--- a/netlify.toml
+++ b/netlify.toml
@@ -2,3 +2,10 @@
 from = "/*"
 to = "/index.html"
 status = 200
+
+[[redirects]]
+from = "/api/*"
+to = "https://tailormadeserver-dbhmbqg0b9eda3dd.westus2-01.azurewebsites.net/:splat"
+status = 200
+force = true
+headers = {Access-Control-Allow-Origin = "*"}
