--- a/netlify.toml
+++ b/netlify.toml
@@ -1,4 +1,9 @@
 [[redirects]]
+from = "/*"
+to = "/index.html"
+status = 200
+
+[[redirects]]
 from = "/api/*"
 to = "https://tailormadeserver-dbhmbqg0b9eda3dd.westus2-01.azurewebsites.net/:splat"
 status = 200
